fix: fix dark mode text color

--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -98,9 +98,9 @@ h6 {
 }
 
 .docs-paragraph {
-    font-size: var(--f-font-size-standard);
-    font-weight: var(--f-font-weight-normal);
-    line-height: var(--f-line-height-large);
+    font-size: var(--docs-font-size);
+    font-weight: var(--docs-font-weight);
+    line-height: var(--docs-line-height);
     margin-bottom: 1rem;
 }
 
@@ -110,10 +110,10 @@ strong {
 }
 
 code {
-    font-size: var(--f-font-size-standard);
+    font-size: var(--docs-font-size);
     border-radius: var(--f-border-radius-small);
     font-family: var(--f-font-family-code);
-    background-color: var(--f-background-code);
+    background-color: var(--docs-code-background-color);
     display: inline-block;
     margin: 0 0.25rem;
     padding: 0 0.25rem;
